feat: blog section

--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^16.0.3",
+    "@contentful/rich-text-plain-text-renderer": "^16.0.3",
+    "@contentful/rich-text-react-renderer": "^15.16.3",
     "@emotion/react": "^11.10.6",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "contentful": "^9.3.5",
+    "contentful-html-rich-text-converter": "^1.0.11",
+    "dayjs": "^1.11.7",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "next": "^13.3.1-canary.5",
     "react": "18.2.0",
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
