--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@contentful/rich-text-html-renderer": "^16.0.3",
     "@contentful/rich-text-plain-text-renderer": "^16.0.3",
     "@contentful/rich-text-react-renderer": "^15.16.3",
+    "@contentful/rich-text-types": "^16.0.3",
     "@emotion/react": "^11.10.6",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
@@ -19,7 +20,6 @@
     "contentful": "^9.3.5",
     "contentful-html-rich-text-converter": "^1.0.11",
     "dayjs": "^1.11.7",
-    "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "^13.3.1-canary.5",
     "react": "18.2.0",
@@ -29,8 +29,22 @@
     "typescript": "5.0.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sonarjs": "^0.12.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.1",
     "postcss": "^8.4.21",
+    "prettier": "^2.5.1",
     "tailwindcss": "^3.3.1"
   }
 }
