--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "disqus-react": "^1.1.5",
         "eslint-config-next": "13.2.4",
         "next": "^13.3.1-canary.5",
+        "next-pwa": "^5.6.0",
         "react": "18.2.0",
         "react-awesome-reveal": "^4.2.3",
         "react-dom": "18.2.0",
