--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react": "18.2.0",
         "react-awesome-reveal": "^4.2.3",
         "react-dom": "18.2.0",
+        "react-icons": "^4.8.0",
         "sharp": "^0.32.0",
         "typescript": "5.0.3"
     },
